further build && component updates

--- a/src/components/adapt-contrib-hotgraphic/less/hotgraphicPopup.less
+++ b/src/components/adapt-contrib-hotgraphic/less/hotgraphicPopup.less
@@ -51,9 +51,13 @@
       align-items: flex-start;
     }
 
-    &__item-content,
     &__item-image-container {
-      width: 50%;
+      width: 25%;
+    }
+
+    &__item-content {
+      width: 75%;
+      margin-right: 2rem;
     }
 
     &__item-image-container {
