--- a/src/components/walkgrove_adapt_graphicBuild/less/graphicBuild.less
+++ b/src/components/walkgrove_adapt_graphicBuild/less/graphicBuild.less
@@ -79,8 +79,8 @@
     }
 
     &__item-content {
-        background-color: @item-color-selected;
-        color: @item-color-inverted-selected;
+        background-color: @item-color;
+        color: @item-color-inverted;
         padding: @component-body-margin;
 
         position: absolute;
