--- a/src/components/walkgrove_adapt_reflection/less/reflection.less
+++ b/src/components/walkgrove_adapt_reflection/less/reflection.less
@@ -8,7 +8,7 @@
     &__widget {
         position: relative;
         textarea {
-            border: 2px solid transparent;
+            border: 2px solid @bike-blue;
             padding: 1rem;
             background-color: @white;
         }
