--- a/src/components/walkgrove_adapt_clickshow/less/clickshow.less
+++ b/src/components/walkgrove_adapt_clickshow/less/clickshow.less
@@ -17,7 +17,7 @@
             &.wrap {
                 flex-wrap: wrap;
                 .clickshow__widget {
-                    margin-bottom: @item-margin;
+                    margin-bottom: 0.5rem;
  
                     &:hover {
                         .graphic-hover {
@@ -29,60 +29,8 @@
         }
     }
 
-    &__headings {
-        display: flex;
-        flex-direction: row;
-        align-items: stretch;
-        justify-content: stretch;
 
-        margin-bottom: @item-margin;
-
-        width: 100%;
-
-        @media (max-width: @device-width-small) {
-            flex-direction: column;
-        }
-    }
-
-    &__heading {
-        display: flex;
-        align-items: stretch;
-        justify-content: stretch;
-
-        padding: @item-padding;
-
-        background-repeat: no-repeat;
-        background-size: auto calc(100% - @item-padding);
-        background-position: (@item-padding/2) (@item-padding/2);
-
-        @media (max-width: @device-width-small) {
-            width: 100% !important;
-        }
-
-        &.left {
-            position: relative;
-
-            @media (max-width: @device-width-small) {
-                margin-bottom: @item-margin;
-            }
-        }
-        &.right {
-            display: flex;
-            flex: 1 1 auto;
-
-            margin-left: @item-margin;
-            @media (max-width: @device-width-small) {
-                margin-left: 0rem;
-            }
-        }
-    }
-
-    &__heading-title {
-        width: 100%;
-        text-align: center;
-    }
-
-    &__widget {
+    .clickshow__widget {
         display: flex;
         flex-direction: row;
         align-items: stretch;
@@ -94,7 +42,7 @@
             flex-direction: column;
         }
 
-        margin: @item-padding 0;
+        margin: 1rem 0;
 
         &.js-clickshow-item {
             cursor: pointer;
@@ -110,22 +58,22 @@
             }
         }
 
-        margin: @item-margin @item-padding @item-margin 0rem;
+        margin: 0.5rem 1rem 0.5rem 0rem;
         &.column {
-            margin: 0 @item-margin;
+            margin: 0 0.5rem;
             flex-direction: column;
             width: auto;
 
             flex: 1 1 0;
 
             @media (max-width: @device-width-small) {
-                margin-bottom: @item-padding;
+                margin-bottom: 1rem;
 				max-width: 100%!important;
             }
         }
     }
 
-    &__item {
+    .clickshow__item {
 
         display: flex;
         flex: 0 0 auto;
@@ -152,8 +100,8 @@
             .graphic-hover {
                 display: none;
                 position: absolute;
-                top: 0;
-                left: 0;
+                top:0;
+                left:0;
                 width: 100%;
                 height: 100%;
             }
@@ -172,9 +120,18 @@
             opacity: 0; 
             flex: 1 1 auto;
 
-            margin-left: @item-margin;
-            @media (max-width: @device-width-small) {
-                margin-left: 0rem;
+            .text {
+                margin-top: 0rem;
+                margin-left: 0.5rem;
+                @media (max-width: @device-width-small) {
+                    margin-left: 0rem;
+                }
+            }
+            .graphic {
+                margin-left: 0.5rem;
+                @media (max-width: @device-width-small) {
+                    margin-left: 0rem;
+                }
             }
         }  
 
@@ -183,7 +140,7 @@
     .text {
         color: @item-color-inverted;
         background-color: @item-color;
-
+        // font-weight: bold;
         width: 100%;
         height: 100%;
 
@@ -192,32 +149,13 @@
         flex-direction: column;
 
         margin-top: 0;
-
-        background-repeat: no-repeat;
-        background-size: @item-padding*3;
-        background-position: right (@item-padding/2) center;
-
-        @media (min-width: @device-width-small) {
-            background-image: none !important;
-        }
-
-        @media (max-width: @device-width-small) {
-            &.has-image {
-                padding-right: @item-padding*4 !important;
-
-                .dir-rtl {
-                    padding-right: inherit !important;
-                    padding-left: @item-padding*4 !important;
-                }
-            }
-        }
+        
     }
 
     .column {
         .right {
-            margin-left: 0;
-            
             .text {
+                // margin-top: 0.5rem;
                 margin-left: 0;
             }
             .graphic {
@@ -226,7 +164,7 @@
         }
     }
 
-    &__item-image {
+    img {
         width: 100%;
         height: 100%;
     }
@@ -243,7 +181,7 @@
         .clickshow__item.right  {
             .text, .graphic {
                 margin-left: 0;
-                margin-right: @item-margin;
+                margin-right: 0.5rem;
             }
         }
         .column {
