--- a/src/theme/adapt-contrib-vanilla/less/client.less
+++ b/src/theme/adapt-contrib-vanilla/less/client.less
@@ -408,7 +408,7 @@ a {
     position: relative;
     padding: 0 2rem;
     &.more-padding {
-        padding: 0 0 0 0 4rem;
+        padding: 0 0 0 4rem;
     }
 
     &:before, &:after {
