briwser/device testing tweaks && reflection updates for interactive video && xapi updates

--- a/src/components/walkgrove_adapt_graphicBuild/less/graphicBuild.less
+++ b/src/components/walkgrove_adapt_graphicBuild/less/graphicBuild.less
@@ -125,19 +125,19 @@
         
     &__btn {
         position: absolute;
-        top: 100%;
-        transform: translate(0%, -100%);
+        top: 0rem;
+        transform: translate(0%, 0%);
         right: 25%;
 
         @media (max-width: @device-width-tablet) {  
             right: 0;
-            top: 0rem;
-            transform: translate(0%, 0%);
+            // top: 0rem;
+            // transform: translate(0%, 0%);
         }
 
         @media (max-width: @device-width-medium) { 
-            top: 0rem;
-            transform: translate(0%, 0%);
+            // top: 0rem;
+            // transform: translate(0%, 0%);
         }
 
         background-color: @item-color;
