--- a/src/components/walkgrove_adapt_interactiveVideo/less/interactiveVideo.less
+++ b/src/components/walkgrove_adapt_interactiveVideo/less/interactiveVideo.less
@@ -7,6 +7,10 @@
         position: relative;
         padding: 1rem;
         flex-direction: column;
+
+        @media (max-width: @device-width-small) {
+            padding: 0rem;
+        }
     }
 
     &__content {
