--- a/src/components/walkgrove_adapt_submenu/templates/submenu.hbs
+++ b/src/components/walkgrove_adapt_submenu/templates/submenu.hbs
@@ -3,6 +3,7 @@
 
   <div class="submenu__main">
     <img class="submenu__background" src="{{_backgroundImage}}" alt="" aria-hidden="true" tabindex="-1" />
+    <img class="submenu__background-mobile" src="{{_backgroundImageMobile}}" alt="" aria-hidden="true" tabindex="-1" />
 
     <div class="submenu__items">
       <div class="submenu__items-container">
