--- a/src/components/walkgrove_adapt_flow/less/flow.less
+++ b/src/components/walkgrove_adapt_flow/less/flow.less
@@ -31,6 +31,9 @@
 
         background-color: @font-color-inverted;
         width: 75%;
+        @media (max-width: @device-width-small) { 
+            width: 100%;
+        }
         margin: 1rem auto;
 
         display: none;
