--- a/src/components/walkgrove_adapt_reflection/less/reflection.less
+++ b/src/components/walkgrove_adapt_reflection/less/reflection.less
@@ -133,6 +133,84 @@
     &__pdf {
         display: none;
     }
+
+    //LOADER
+    &__loader {
+        position: absolute;
+        top:0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        pointer-events: none;
+
+        background-color: rgba(@white, 0.7);
+        color: @primary-colour;
+        font-weight: @font-weight-bold;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        &.is-hidden {
+            display: none;
+        }
+    }
+
+    &__preload-icon {
+        width: 3rem;
+        width: 3rem;
+        object-fit: contain;
+        min-width: 0;
+    }
+
+    .dot-flashing {
+        position: relative;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 100%;
+        background-color: @secondary-colour;
+        color: @secondary-colour;
+        animation: dot-flashing 1s infinite linear alternate;
+        animation-delay: 0.5s;
+        margin-top: 2rem;
+    }
+    .dot-flashing::before, .dot-flashing::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        top: 0;
+    }
+    .dot-flashing::before {
+        left: -1.5rem;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 100%;
+        background-color: @secondary-colour;
+        color: @secondary-colour;
+        animation: dot-flashing 1s infinite alternate;
+        animation-delay: 0s;
+    }
+    .dot-flashing::after {
+        left: 1.5rem;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 100%;
+        background-color: @secondary-colour;
+        color: @secondary-colour;
+        animation: dot-flashing 1s infinite alternate;
+        animation-delay: 1s;
+    }
+    
+    @keyframes dot-flashing {
+        0% {
+            background-color: @secondary-colour;
+        }
+        50%, 100% {
+            background-color: @primary-colour;
+        }
+    }
   
 }
 
