--- a/src/theme/adapt-contrib-vanilla/less/client.less
+++ b/src/theme/adapt-contrib-vanilla/less/client.less
@@ -418,6 +418,12 @@ a {
     }
 }
 
+.b-06_01_1_T_F, .b-06_02_2_T_F, .b-06_03_3_T_F, .b-06_04_4_T_F, .b-06_05_5_T_F {
+    .footer__inner {
+    justify-content: left!important;
+    }
+}
+
 /// CUSOMT STYLES
 
 .narrative-quote, .timeline-quote, .flow-quote {
